2011-05-12 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter