@@ -1,3 +1,6 @@
+2011-05-12 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added sql table for files downloads statistics
+
 2011-05-12 In Cite Solution  <technique@in-cite.net>
 
 	* initial code generated with kickstarter
